2014-09-20  Julien Bect  <julien.bect@supelec.fr>

	Don't use ~ to ignore arguments.

	* admin/build_tools/build_octpkg.m: Don't use ~ to ignore arguments.
	* utils/stk_generate_samplepaths.m: Don't use ~ to ignore arguments.

2014-09-15  Julien Bect  <julien.bect@supelec.fr>

	stk_param_relik.m: Optimize the case of simple kriging.

	* paramestim/stk_param_relik.m: Optimize the case of simple kriging.

2014-09-09  Paul Feliot  <paul.feliot@irt-systemx.fr>

	doc: Update help text for several functions.

	* covfcs/stk_materncov32_aniso.m: Update help text.
	* covfcs/stk_materncov32_iso.m: Update help text.
	* covfcs/stk_materncov52_aniso.m: Update help text.
	* covfcs/stk_materncov52_iso.m: Update help text.
	* covfcs/stk_materncov_aniso.m: Update help text.
	* covfcs/stk_materncov_iso.m: Update help text.
	* paramestim/stk_param_init.m: Update help text.

2014-09-02  Julien Bect  <julien.bect@supelec.fr>

	Rename LICENSE to COPYING.

	* LICENSE: Renamed to COPYING.
	* COPYING: Formerly known as LICENSE.
	* README: Update reference to LICENSE.
	* admin/build_tools/build_forgedoc.m: No more need to rename.
	* admin/build_tools/build_octpkg.m: No more need to rename.
	* admin/find_nonstandard_characters.sh: Update reference to LICENSE.
	* admin/fix_eol.sh: Update reference to LICENSE.

	Rename WHATSNEW to NEWS.

	* NEWS: Formerly known as WHATSNEW. This version is for release
	2.1.1 (we still have to update it to 2.2.0). From now on, we will
	always keep a version of this file in the default branch.
	* admin/build_tools/build_forgedoc.m: No need to rename WHATSNEW
	to NEWS anymore.
	* admin/build_tools/build_octpkg.m: Same thing.

2014-08-20  Julien Bect  <julien.bect@supelec.fr>

	Add CITATION file.

	* CITATION: Explain how to cite STK in publications.

2014-08-18  Julien Bect  <julien.bect@supelec.fr>

	Document stk_length.

	* arrays/generic/stk_length.m: Add doc.
	* arrays/@stk_dataframe/stk_length.m: Fix doc.
	* admin/octave-pkg/INDEX: Un-hide stk_length.
